[gd_scene load_steps=9 format=3 uid="uid://dkuxe3g3spa6b"]

[ext_resource type="Script" path="res://Client/Scripts/Units/unit_3.gd" id="1_46q57"]
[ext_resource type="Texture2D" uid="uid://bl24groudrqas" path="res://Client/Sprites/units/unit_3/unit_3_highlight.png" id="1_obgw2"]
[ext_resource type="Texture2D" uid="uid://bdb1pafoaqbh8" path="res://Client/Sprites/units/unit_3/unit_3_red.png" id="2_8dygg"]
[ext_resource type="Texture2D" uid="uid://bsg4spuh25u23" path="res://Client/Sprites/units/unit_3/unit_3_blue.png" id="3_wtky6"]
[ext_resource type="Texture2D" uid="uid://dalksb8qj2xg2" path="res://Client/Sprites/units/unit_3/unit_3_outline.png" id="4_ctd33"]
[ext_resource type="Texture2D" uid="uid://barnea8j0uqsu" path="res://Client/Sprites/units/unit_3/unit_3_red_outline.png" id="5_gphwo"]
[ext_resource type="Texture2D" uid="uid://bqa3jdvxo0ypg" path="res://Client/Sprites/units/unit_3/unit_3_blue_outline.png" id="6_oo05d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g3nrg"]
radius = 15.0

[node name="unit_3" type="CharacterBody2D"]
position = Vector2(347, 282)
collision_layer = 2
collision_mask = 4
input_pickable = true
script = ExtResource("1_46q57")

[node name="highlight" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3.45707e-06, -3)
scale = Vector2(0.45, 0.45)
texture = ExtResource("1_obgw2")

[node name="unit_3_red" type="Sprite2D" parent="."]
visible = false
position = Vector2(-7.15256e-06, -2)
scale = Vector2(0.41291, 0.41291)
texture = ExtResource("2_8dygg")

[node name="unit_3_blue" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -3)
scale = Vector2(0.421875, 0.421875)
texture = ExtResource("3_wtky6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(0.433302, 0.433302)
texture = ExtResource("4_ctd33")

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g3nrg")
one_way_collision_margin = 0.0

[node name="red_outline" type="Sprite2D" parent="."]
visible = false
position = Vector2(-7.62939e-06, -3)
scale = Vector2(0.426229, 0.42623)
texture = ExtResource("5_gphwo")

[node name="blue_outline" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -3)
scale = Vector2(0.429303, 0.429303)
texture = ExtResource("6_oo05d")

[connection signal="input_event" from="." to="." method="_on_input_event"]
